# dsonnxinfer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: sample_input.json
scripts/vcpkg-manifest/: vcpkg.json
src/: CMakeLists.txt  dsonnxinferConfig.cmake.in
src/dsonnxinfer/: CMakeLists.txt  dsonnxinfer_common.h  dsonnxinfer_global.h
src/dsonnxinfer/core/: Environment.cpp  Environment.h
src/dsonnxinfer/inference/: AcousticInference.cpp  AcousticInference.h  DurationInference.cpp  DurationInference.h  IInference.cpp  IInference.h  InferenceCommon.cpp  InferenceCommon_p.h  PitchInference.cpp  PitchInference.h  VarianceInference.cpp  VarianceInference.h
src/dsonnxinfer/models/: DsConfig.cpp  DsConfig.h  DsProject.cpp  DsProject.h  DsProjectSerializers.cpp  DsProjectSerializers_p.h  SampleCurve.cpp  SampleCurve.h  SpeakerEmbed.cpp  SpeakerEmbed.h
src/dsonnxinfer/utils/: ArrayUtil.hpp  Status.cpp  Status.h
tests/: CMakeLists.txt
tests/tst_example1/: CMakeLists.txt  main.cpp
